--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,28 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
+
+.timer {
+    display: flex;
+    justify-content: center;
+    color: rgb(8, 75, 8);
+  }
+  .field {
+    display: block;
+  }
+  .value {
+    margin-bottom: 15px;
+    font-family: 'Dela Gothic One', sans-serif;
+    font-size: 100px;
+  }
+  .field {
+    display: block;
+  }
+  .label {
+    display: block;
+    text-align: center;
+    font-family: 'Dela Gothic One', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    margin-right: 30px;
+  }
