--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -28,4 +28,37 @@
   background-size: cover;
   background-position: center;
 }
+
+.timer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #084b08;
+}
+
+.field {
+  display: block;
+}
+
+.value {
+  margin-bottom: 15px;
+  font-family: 'Dela Gothic One', sans-serif;
+  font-size: 100px;
+}
+
+.field {
+  display: block;
+}
+
+.label {
+  display: block;
+  text-align: center;
+  font-family: 'Dela Gothic One', sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  margin-right: 30px;
+}
 /*# sourceMappingURL=main.css.map */
